added code to use rag, to deploy embedding and model

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+azure-ai-inference
+azure-ai-projects
 azure-ai-textanalytics
 azure-core
 azure-identity
@@ -6,6 +8,8 @@ certifi
 dotenv
 flask
 matplotlib
+openai
 pillow
+promptflow
 pylint
 requests
