added logic to create ai agents and use them with code interpretor, file plugin, multi agent with semantic kernel

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+azure-ai-agents
 azure-ai-inference
 azure-ai-projects
 azure-ai-textanalytics
@@ -13,3 +14,4 @@ pillow
 promptflow
 pylint
 requests
+semantic-kernel[azure]
