--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ obj
 # Crash log files
 crash.log
 crash.*.log
-
+*.log
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version
 # control as they are data points which are potentially sensitive and subject
@@ -36,3 +36,8 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+ticket-*.txt
+
+# Ignore Python cache directories
+**/__pycache__/**
